WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169986
WKScrollView should not require data interaction gestures to fail before panning
https://bugs.webkit.org/show_bug.cgi?id=169986
Summary
WKScrollView should not require data interaction gestures to fail before panning
Wenson Hsieh
Reported
2017-03-22 18:44:06 PDT
WKScrollView should not require data interaction gestures to fail before panning. This was a temporary workaround that is no longer needed.
Attachments
Patch
(1.79 KB, patch)
2017-03-22 19:48 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-03-22 19:48:00 PDT
Created
attachment 305157
[details]
Patch
Wenson Hsieh
Comment 2
2017-03-22 21:22:16 PDT
Comment on
attachment 305157
[details]
Patch Thanks Tim!
WebKit Commit Bot
Comment 3
2017-03-22 21:51:50 PDT
Comment on
attachment 305157
[details]
Patch Clearing flags on attachment: 305157 Committed
r214295
: <
http://trac.webkit.org/changeset/214295
>
WebKit Commit Bot
Comment 4
2017-03-22 21:51:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug