WKScrollView should not require data interaction gestures to fail before panning https://bugs.webkit.org/show_bug.cgi?id=169986

Reviewed by Tim Horton.

This workaround is no longer needed.

* UIProcess/ios/WKScrollView.mm:


Canonical link: https://commits.webkit.org/186922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214295 268f45cc-cd09-0410-ab3c-d52691b4dbfc